# terrex

./: .gitignore  LICENSE.txt  README.md  README.rst  ci.sh  pyproject.toml  requirements.txt  setup.py  todo.md
docs/: packets.md  packets_direction.md  packets_sync.md  processed_packets.md
examples/: chat_example.py  draw_map_example.py  item_example.py  move_test.py  movement_example.py  sync_draw_map_example.py
helper/: .gitignore  README.md  TerrariaPyGen.py  convert_id_helper.py  cs_to_py_generator.py  generate_packets_docs.py  map_color_generator.py  rename_packets.py
locale/: LICENSE.txt  README.md  terraria_localization.py
locale/de-DE/: de-DE.NPCs.json  de-DE.Projectiles.json  de-DE.Town.json  de-DE.json
locale/en-US/: en-US.NPCs.json  en-US.Town.json
locale/es-ES/: es-ES.Game.json  es-ES.Items.json  es-ES.Legacy.json  es-ES.NPCs.json  es-ES.Town.json  es-ES.json
locale/fr-FR/: fr-FR.Legacy.json  fr-FR.NPCs.json  fr-FR.Town.json
locale/it-IT/: it-IT.Game.json  it-IT.Items.json  it-IT.Legacy.json  it-IT.NPCs.json  it-IT.Projectiles.json
locale/ja-JP/: ja-JP.Items.json  ja-JP.Legacy.json  ja-JP.json
locale/ko-KR/: ko-KR.Legacy.json  ko-KR.NPCs.json
locale/pl-PL/: pl-PL.Game.json  pl-PL.Items.json  pl-PL.NPCs.json  pl-PL.Town.json  pl-PL.json
locale/pt-BR/: pt-BR.Items.json  pt-BR.Legacy.json  pt-BR.NPCs.json
locale/ru-RU/: ru-RU.Legacy.json  ru-RU.NPCs.json  ru-RU.Projectiles.json  ru-RU.Town.json
locale/zh-Hans/: zh-Hans.Items.json  zh-Hans.Legacy.json  zh-Hans.NPCs.json
locale/zh-Hant/: zh-Hant.Game.json  zh-Hant.Items.json  zh-Hant.NPCs.json  zh-Hant.Town.json
locales/: README.md  requirements.txt  terraria_localization.py
locales/de-DE/: de-DE.Game.json  de-DE.Items.json  de-DE.Legacy.json
locales/en-US/: en-US.Game.json  en-US.Items.json  en-US.Legacy.json  en-US.Projectiles.json  en-US.json
proxy/: README.md  config.py  middleware.py  parser.py  proxy.py
terrex/: README.md  __init__.py  bot.py  client.py  main.py  protocols.py  terrex.py
tests/: test_player_movement.py
(+710 files in other folders)
