[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrex"
version = "1.0.0"
description = "Programmable automation client for Terraria servers"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["terraria", "automation", "bots", "agents", "protocol", "api"]
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    { name="Maksim Stashkevich", email="makstashkevich@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["terrex"]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[tool.black]
line-length = 200
target-version = ["py310"]
skip-string-normalization = true
exclude = '''
(
    /terrex/structures/id
    | /locale
    | /docs
    | /debug
    | /assets
    | /.*\.txt$
    | /.*venv
    | /.*__pycache__
    | /.*build
    | /.*\.egg-info
)
'''

[tool.ruff]
target-version = "py310"
line-length = 200
fix = true
exclude = [
    "terrex/structures/id/*",
    "locale/*",
    "docs/*",
    "debug/*",
    "assets/*",
    ".venv",
    "__pycache__",
    "build",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = [
    "E501",  # long strings
]

[tool.ruff.lint.isort]
known-first-party = ["terrex"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ".*(/venv/|/build/|/docs/|/debug/|.*\\.txt|.*\\.md)$"